--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="nav-center">
           <!-- nav header -->
           <div class="nav-header">
-            <img src="./logo.svg" class="logo" alt="logo" />
+            <img src="./volvo.jpg" class="logo" alt="logo" />
             <button class="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
@@ -77,7 +77,7 @@
     <!-- footer -->
     <footer class="section">
       <p>
-        copyright &copy; backroads travel tours company
+        copyright &copy; Volvo travel tours company
         <span id="date"></span>. all rights reserved
       </p>
     </footer>
